# UPS_Server

./: .gitignore  CMakeLists.txt  main.cpp
Game/: GameRPS.cpp  GameRPS.h  Player.cpp  Player.h
game/: Game.cpp  Game.h  Player.cpp  Player.h
requests/: CommunicationParser.cpp  CommunicationParser.h  InGoing.cpp  InGoing.h  OutGoing.cpp  OutGoing.h
server/: MyServer.cpp  MyServer.h
